...

    android:paddingEnd="0dp"
    app:layout_constraintEnd_toStartOf="@+id/guideline_add_meeting"
    app:layout_constraintStart_toStartOf="@+id/guideline_add_meeting">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
...
                app:counterMaxLength="30"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/edit_text_add_meeting_subject"
                    style="@android:style/Widget.Material.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/add_meeting_subject"
...
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    tools:layout_editor_absoluteX="46dp"
                    tools:layout_editor_absoluteY="87dp">

                    <TextView
                        android:id="@+id/text_add_meeting_datepicker"
                        style="@android:style/Widget.Holo.Light.Button"
                        android:layout_width="164dp"
                        android:layout_height="wrap_content"
                        android:calendarViewShown="false"
                        android:drawableStart="@drawable/ic_date_range_black_24dp"
                        android:drawablePadding="@dimen/margin_normal"
                        android:paddingEnd="10dp"
                        android:text="@string/add_meeting_datepicker"
                        android:textSize="@dimen/text" />

                    <TextView
                        android:id="@+id/text_add_meeting_timepicker"
                        style="@android:style/Widget.Holo.Light.Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:calendarViewShown="false"
                        android:drawableStart="@drawable/ic_access_time_black_24dp"
                        android:drawablePadding="@dimen/margin_normal"
...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />

                <NumberPicker
                    android:id="@+id/numberpicker_add_meeting_duration_hours_"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/picker"
                    android:layout_marginEnd="@dimen/margin_normal"
                    android:inputType="datetime"
                    android:timePickerMode="spinner"
                    app:layout_constraintEnd_toStartOf="@+id/guideline_add_meeting"
...
                    android:textColor="@android:color/black"
                    app:layout_constraintStart_toEndOf="@+id/numberpicker_add_meeting_duration_hours_"
                    app:layout_constraintTop_toBottomOf="@+id/text_add_meeting_duration"
                    tools:ignore="HardcodedText" />

                <NumberPicker
                    android:id="@+id/numberpicker_add_meeting_duration_minutes_"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/picker"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:layout_marginEnd="@dimen/large_margin"
                    android:inputType="datetime"
                    android:timePickerMode="spinner"
                    app:layout_constraintStart_toEndOf="@+id/guideline_add_meeting"
                    app:layout_constraintTop_toBottomOf="@+id/text_add_meeting_duration" />

            <Spinner
                android:id="@+id/spinner_add_meeting_room"
                style="@android:style/Widget.Holo.Light.Spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_double"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/numberpicker_add_meeting_duration_minutes_"
                tools:text="@string/add_meeting_room" />

            <MultiAutoCompleteTextView
                android:id="@+id/autocomplete_text_add_meeting_guests"
                style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_double"
                android:layout_marginTop="@dimen/margin_double"
                android:layout_marginEnd="@dimen/margin_double"
...
