<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.mareu.Activity.AddMeetingActivity">

     <item
        android:id="@+id/menu_overflow_button_create_meeting"
        android:icon="@drawable/ic_baseline_save_24"
        android:title="@string/menu_creation_meeting"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/menu_button_create_meeting"
                android:title="@string/menu_creation_meeting" />
...
